$size[20]{$u{CHANGE LOG:}}

$size[14]{$u{Update for whenever (Latikai):}}
  * A lock button for the minimap was added, allowing you to lock it. This will prevent you from moving the minimap window, but not from panning it.
 
$size[14]{$u{Update for 23.09.14 (Latikai):}}
  * Bile regen colours reverted to what they were before.
  * Included changelog for yesterday.
  * Multiplier has no real relevance anymore over aether percentage. The corresponding toggle will control precision of purity percentage display.
  * Implemented sorted scrolling of items to and from storage. Press control while scrolling to transfer highest-purity first, press control and alt to transfer lowest purity first.

$size[14]{$u{Update for 23.09.14 (Latikai):}}
  * Crafting menu will no longer go to root after selecting a recipe (credit to Feone).
  * Aether multiplier now also available if you have the respective options ticked.
 
$size[14]{$u{Update for 20.09.14 (Latikai):}}
  * Merged in the latest patch changes. Small tweaks to come when I have time to read the patch notes in detail.
  * Added in the options to remove the biles and minimap from rendering at all (for some vid'ers out there).
  * The client currently shows just aether as a purity percentage.
 
$size[14]{$u{Update for 10.08.14 (Latikai):}}
  * Various updates to the crafting menu: once again correctly reads from the wiki, and will now also show debuffs on food items (undebuffs cannot be shown as these are dependent on the ingredients used).
 
$size[14]{$u{Update for 29.07.14 (Latikai):}}
  * Lowered the buff icons a bit for better visibility.
 
$size[14]{$u{Update for 08.07.14 (Latikai):}}
  * Included an abacus window (open with ctrl+A). It lists the scalp score and artifice overview of the current character. The scalp score will only update by closing and reopening the window, but artifice information will be recalculated when you (un)equip an item.